tests/errors/break_outside_control_flow.dang
# break is only valid inside a loop or block-taking call
break
